--- a/pages/collection.html
+++ b/pages/collection.html
@@ -15,8 +15,8 @@
 <script>
     $('[collection]').each(function() {
         $(this).mouseenter(() => {
-            $('.box').hide()
-            $('.box', this).fadeIn()
+            $('.box').removeClass('appear')
+            $('.box', this).addClass('appear')
             $('#bg').attr('class', $(this).attr('collection'))
         })
     })
